Fix small event width when too much notifications on IE

--- a/src/webview/bulma.css
+++ b/src/webview/bulma.css
@@ -336,6 +336,7 @@ header,
 hgroup,
 section {
   display: block;
+  min-height: 30px;
 }
 
 body,
